# DG_Pro

./: CMakeLists.txt  README.md  run.sh
cmake/: ConfigureOpenCV.cmake  ConfigureOpengl.cmake  ConfigurePython.cmake  MyConfigure.cmake
data/textures/: Thumbs.db
include/Graphics/DavidMeshLib/Geometry/: Point.h  Point2.h  Quat.h
include/Graphics/DavidMeshLib/Mesh/: BaseMesh.h  Edge.h  Face.h  HalfEdge.h  TriangleSoup.h  Vertex.h  boundary.h  iterators.h
include/Graphics/DavidMeshLib/Parser/: parser.h  strutil.h  traits_io.h
include/Graphics/DavidMeshLib/bmp/: RgbImage.cpp  RgbImage.h
include/Graphics/DavidMeshLib/viewer/: arcball.h
include/Graphics/HarmonicMapper/: HarmonicMapper.h  HarmonicMapperMesh.h  Structure.h
main/: CMakeLists.txt  HMapper.cpp  RiemanMapper.cpp  view_mesh.cpp
python/cmake_generated/: libmyclib.conf  libs.txt  srcs.txt
src/cpp/HarmonicMapper/: HarmonicMapper.cpp
src/cpp/bmp/: RgbImage.cpp
